tests/error/if_exp_compat.gw
#! [contains] incompatible types
maybe ? 2.1 : 1;
